logs/Slang/generated/hdlconv/hdlconvertor_p714.sv.log
name: hdlconvertor_p714
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p714.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p714.sv:7:1: error: unknown module 'alu'
alu
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p714.sv:10:1: error: unknown module 'accum'
accum accum (.*, .dataout(dataout[7:0]), .datain(alu_out));
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p714.sv:11:1: error: unknown module 'xtend'
xtend xtend (.*, .dout(dataout[15:8]), .din(alu_out[7]));
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p714.sv:22:1: error: unknown module 'alu'
alu alu (.ain(ain), .bin(bin), .alu_out, .zero(), .opcode);
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p714.sv:24:1: error: unknown module 'accum'
accum accum (dataout[7:0], alu_out, clk, rst_n);
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p714.sv:26:1: error: unknown module 'xtend'
xtend xtend (.dout(dataout[15:8]), .*, .din(alu_out[7]));
^~~~~
